2011-01-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Fix . to -> of local_sig.

2011-01-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* SATSolver.h: Refactoring.

2010-12-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Use local_sig as a member.
	* SATSolver.h: Likewise.

	* Makefile.am: Fix compiling problem when integrating relsat into
	dmcs.
	* SATInstance.h: Likewise.
	* BigNum.h: Likewise.

2010-12-20  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Integrate dmcs stuff into relsat.
	* SATSolver.cpp: Likewise.

	* Makefile.am (librelsat_a_SOURCES): Temporarily comment out
	relsal lib.

2010-12-20  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure: Remove.

	* configure.ac: Use autoconf and automake for building relsat.
	* bootstrap.sh: Likewise.
	* Makefile.am: Likewise.

2010-12-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure: Creates a wrapper Makefile for librelsat.a.

2010-12-19  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Add facilities to return models in the form of
	BeliefState in a message queue.
	* SATSolver.cpp (_bOutputBeliefState): Likewise.

2010-12-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* Makefile.linux (CFLAGS): Add path to bm3.7.0

2010-12-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* RandGen.h (RandGen::N, RandGen::M): Use static member variables
	for N and M prevents compile errors when including relsat together
	with bitmagic headers.
